@@ -13,6 +13,8 @@
     <cucumber.version>1.2.3</cucumber.version>
     <junit.version>4.12</junit.version>
     <phantamjs.version>1.2.1</phantamjs.version>
+    <!-- configurable variables-->
+    <surefire.fork.count>4</surefire.fork.count>
   </properties>
   <dependencies>
     <dependency>
@@ -147,10 +149,9 @@
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
-        <version>3.5.1</version>
+        <version>2.3.2</version>
       </plugin>
-
-        <plugin>
+      <plugin>
           <groupId>com.lazerycode.selenium</groupId>
           <artifactId>driver-binary-downloader-maven-plugin</artifactId>
           <version>1.0.9</version>
@@ -168,54 +169,10 @@
             </execution>
           </executions>
         </plugin>
-
-      <!--<plugin>-->
-        <!--<groupId>com.github.temyers</groupId>-->
-        <!--<artifactId>cucumber-jvm-parallel-plugin</artifactId>-->
-        <!--<version>1.2.1</version>-->
-        <!--<executions>-->
-          <!--<execution>-->
-            <!--<id>generateRunners</id>-->
-            <!--<phase>validate</phase>-->
-            <!--<goals>-->
-              <!--<goal>generateRunners</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-              <!--&lt;!&ndash; Mandatory &ndash;&gt;-->
-              <!--&lt;!&ndash; comma separated list of package names to scan for glue code &ndash;&gt;-->
-              <!--<glue>com.test.shoop</glue>-->
-              <!--&lt;!&ndash; These are the default values &ndash;&gt;-->
-              <!--&lt;!&ndash; Where to output the generated tests &ndash;&gt;-->
-              <!--<outputDirectory>${project.build.directory}/generated-test-sources/cucumber</outputDirectory>-->
-              <!--&lt;!&ndash; The diectory, which must be in the root of the runtime classpath, containing your feature files.  &ndash;&gt;-->
-              <!--<featuresDirectory>src/test/resources/features/</featuresDirectory>-->
-              <!--&lt;!&ndash; Directory where the cucumber report files shall be written  &ndash;&gt;-->
-              <!--<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>-->
-              <!--&lt;!&ndash; comma separated list of output formats &ndash;&gt;-->
-              <!--<format>json</format>-->
-              <!-- CucumberOptions.strict property -->
-              <!--<strict>true</strict>-->
-              <!--&lt;!&ndash; CucumberOptions.monochrome property &ndash;&gt;-->
-              <!--<monochrome>true</monochrome>-->
-              <!--&lt;!&ndash; The tags to run, maps to CucumberOptions.tags property &ndash;&gt;-->
-              <!--&lt;!&ndash;<tags>"@LoginOut", "@MerchantCategory", "@MemberActivity", "@UnregisteredEmail", "@MerchantUrl", "@Registration", "@UpdateUserDetails" , "@Validatemerchantcategory"</tags>&ndash;&gt;-->
-              <!--&lt;!&ndash; If set to true, only feature files containing the required tags shall be generated. &ndash;&gt;-->
-              <!--&lt;!&ndash; Excluded tags (~@notMe) are ignored. &ndash;&gt;-->
-              <!--<filterFeaturesByTags>false</filterFeaturesByTags>-->
-              <!--&lt;!&ndash; Generate TestNG runners instead of JUnit ones. &ndash;&gt;-->
-              <!--<useTestNG>false</useTestNG>-->
-              <!--&lt;!&ndash; The naming scheme to use for the generated test classes.  One of 'simple' or 'feature-title' &ndash;&gt;-->
-              <!--<namingScheme>simple</namingScheme>-->
-              <!--&lt;!&ndash; The class naming pattern to use.  Only required/used if naming scheme is 'pattern'.&ndash;&gt;-->
-              <!--&lt;!&ndash;<namingPattern>Parallel{c}IT</namingPattern>&ndash;&gt;-->
-            <!--</configuration>-->
-          <!--</execution>-->
-        <!--</executions>-->
-      <!--</plugin>-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.18.1</version>
+        <version>2.19.1</version>
         <executions>
           <execution>
             <goals>
@@ -225,8 +182,15 @@
           </execution>
         </executions>
         <configuration>
+          <forkCount>${surefire.fork.count}</forkCount>
+          <reuseForks>false</reuseForks>
+          <argLine>-Duser.language=en</argLine>
+          <argLine>-Xmx1024m</argLine>
+          <argLine>-XX:MaxPermSize=256m</argLine>
+          <argLine>-Dfile.encoding=UTF-8</argLine>
+          <useFile>false</useFile>
         <includes>
-          <include>**/*Runner.class</include>
+          <include>**/*BaseRunner.class</include>
         </includes>
         </configuration>
       </plugin>
